# discrepancy-desk

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  security.rs
docs/: ac01-post-m05-audit-correction-closure.md  backup-encryption-prerequisites.md  desktop-build-tooling.md  ht-coverage-ledger.md  m03-exit-gate-review.md  m04-exit-gate-review.md  m04-service-api-contract.md  m05-desktop-security-contract.md  m05-exit-gate-review.md  m06a-phase1-implementation-closure.md
migrations/: env.py  manifest.sha256
parser_resources/: manifest.sha256
scripts/: build_desktop_sidecar.py  run_ht_evidence.py
tests/: conftest.py  test_integrity_and_restore.py  test_lifecycle_contract.py  test_m04_editorial_schedule_contract.py  test_m04_editorial_week_scenario.py  test_m04_operator_queries.py  test_m04_web_workflow.py  test_m05_desktop_api_contract.py  test_m05_desktop_security.py  test_m05_packaging_contract.py  test_m05_sidecar_lifecycle.py  test_m06a_actor_authority.py  test_m06a_backup_restore.py  test_m06a_desktop_workflow.py  test_m06a_ingestion_artifacts.py  test_m06a_migrations.py  test_m06a_parser_framework.py  test_m06a_parser_packaging.py  test_m06a_parser_stdlib.py  test_m06a_phase2_desktop_workflow.py  test_m06a_policy_context.py  test_m06a_srt_packaging.py  test_m06a_srt_parser.py  test_m06a_text_admission.py  test_m06a_text_canonical_execution.py  test_m06a_vault_identity.py  test_m06a_vtt_packaging.py  test_m06a_vtt_parser.py  test_migration_archive_evidence.py  test_operator_service_loop.py  test_persistence_hammer.py  (+5 more)
(+84 files in other folders)
