[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discrepancy-desk"
version = "0.1.0"
description = "Local human-approved control room for The Discrepancy Desk"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/discrepancy_desk"]
