[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discrepancy-desk"
version = "0.1.0"
description = "Local human-approved control room for The Discrepancy Desk"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.7",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/discrepancy_desk"]
