[package]
name = "discrepancy-desk-desktop"
version = "0.1.0"
description = "The Discrepancy Desk desktop control room"
authors = ["The Discrepancy Desk"]
edition = "2021"

[lib]
name = "discrepancy_desk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "2"
